Add CI/CD workflows for pull request checks and dependency management. Introduce CODEOWNERS for code review assignments, update package.json scripts for CI tasks, and add a pull request template for better contribution guidelines.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format:check": "prettier --check .",
     "check": "pnpm lint && pnpm format:check",
     "fix": "pnpm lint:fix && pnpm format",
+    "ci": "pnpm check && pnpm build",
+    "validate": "pnpm install --frozen-lockfile && pnpm ci",
     "preview": "vite preview"
   },
   "dependencies": {
