Enhance testing setup and CI workflows
- Added Vitest configuration to support testing with globals and jsdom environment in vite.config.js.
- Created a setup file for tests to mock localStorage, fetch, and other global objects.
- Implemented unit tests for QR code utility functions, covering generation and validation scenarios.
- Updated CI workflows to include test execution in both CI and PR checks, ensuring tests run before builds.
- Added necessary testing libraries to package.json and pnpm-lock.yaml for improved testing capabilities.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,17 +47,11 @@ jobs:
       - name: Check Prettier formatting
         run: pnpm run format:check
 
+      - name: Run tests
+        run: pnpm run test:run
+
       - name: Build project
         run: pnpm run build
-
-      - name: Run tests (if available)
-        run: |
-          if [ -f "package.json" ] && grep -q '"test"' package.json; then
-            pnpm run test
-          else
-            echo "No tests found, skipping test step"
-          fi
-        continue-on-error: true
 
   security-checks:
     name: Security Checks
